namespace LibraryDoorSystem;

public class FakeDoor
{
    FakeDoor()
    {

    }

    public void Close()
    {

    }

    public void Open()
    {

    }
}