namespace LibraryDoorSystem;

public class FakeUserValidation
{

}